--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
                                 <div id="logo">
                                     <a href="index.html">
                                         <img class="logo-main" src="images/Vedora_png.png" alt="" >
-                                        <img class="logo-scroll" src="images/logo-black.webp" alt="" >
-                                        <img class="logo-mobile" src="images/logo-black.webp" alt="" >
+                                        <img class="logo-scroll" src="images/Vedora_png.png" alt="" >
+                                        <img class="logo-mobile" src="images/Vedora_png.png" height="30px" alt="" >
                                     </a>
                                 </div>
                                 <!-- logo end -->
                             </div>
                             <div class="de-flex-col header-col-mid">
                                 <!-- mainemenu begin -->
-                              <ul id="mainmenu">
+                              <ul id="mainmenu" style="padding-left:30px;">
                                     <li><a class="menu-item" href="index.html" style="color: #d68f00;font-size: medium;">Home</a>
                                     
                                     </li>
